cct-2354 spi phase 2 - rel2529 (#455)
* removed courtschedule query on duration enrichment for list courthearing

* hearingDurationService add

* renamed some classes&methods and extracted interface

* LPT-84: Fixed dependency versions

* Merge from main

* Fixed conflicts and tests

* Fixed conflicts and tests

* updated coredomain version

* updated progression version

* LPT-84 list Mags changes

* updated cursor settings

* added build paths to settings.json

* fixed sequence and hearingendDate

* fixed adhoc hearing flow

* crown enrichment

* added script for local development

* added project structure

* added command endpoint rule

* updates on cursor rules

* updated test strategy

* added a new structure for integration tests

* fixed sjp and adhoc hearing flows

* small refactor

* crown adjournment

* sjp duration autofix

* mags adjournment

* fixed remove hearing

* fixed adhoc hearing duration based

* adjournment journeys including multiday

* temp commit

* temp changes

* added new stub

* disabled some tests temporarily

* updates for sonar issues

* additions to updates for sonar issues

* disabled integration tests temporarily

* New 17.0.68-SPIPH2-SNAPSHOT

* Fixed immutablelist sort functionality

* New 17.0.69-SPIPH2-SNAPSHOT

* updated sequence logic

* LPT-1248 interim commit with working reference data stub for prosecutor

* unallocated to allocated

* fixed duration issue

* New 17.0.70-SPIPH2-SNAPSHOT

* LPT-1248 interim commit

* LPT-1248 first working test :-)

* updated day duration and fixed allocated journey

* update move hearing mags

* LPT-1248-interim commit

* update for split journeys

* updated tests

* updates for sonar issues

* New 17.0.71-SPIPH2-SNAPSHOT

* updated main courtcentre object to fix allocated UI

* fixed crown adhoc creation

* LPT-1248 payload listcourthearing working

* fixed weekcommencing adjournement

* adhoc weekcommencing

* New 17.0.72-SPIPH2-SNAPSHOT

* updated log statements to match condition

* L